# swim

./: Cargo.toml  debug.sh  release.sh
src/: config.rs  ipc.rs  lib.rs  swim.rs  wm.rs
